--- a/scss/_competition.scss
+++ b/scss/_competition.scss
@@ -6,7 +6,7 @@
   color: rgba(255, 255, 255, 0.68);
 }
 
-.hero {
+.heropetrosmart {
   	position: relative;
 	background: linear-gradient(
 	rgba(27, 33, 49, 0.85), 
@@ -17,6 +17,32 @@
 	background-size: cover;
 	-o-background-size: cover;
 	height: 900px;
+}
+
+.herobisniscase {
+position: relative;
+background: linear-gradient(
+rgba(27, 33, 49, 0.85), 
+rgba(27, 33, 49, 1)),
+url("../img/BisnisCase.svg") no-repeat center;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+background-size: cover;
+-o-background-size: cover;
+height: 900px;
+}
+
+.heropaper {
+  position: relative;
+background: linear-gradient(
+rgba(27, 33, 49, 0.85), 
+rgba(27, 33, 49, 1)),
+url("../img/Paper.svg") no-repeat center;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+background-size: cover;
+-o-background-size: cover;
+height: 900px;
 }
 
 .hero-title h1{
@@ -121,6 +147,34 @@
 	color: white; 
 	border: 2px solid #4CAF50;
   }
+
+  .buttonrgster {
+    background-color: #4CAF50;
+    border: 1px solid #4CAF50;
+    color: white; 
+    width: 200px;
+    max-width: 100%;
+    height: 50px;
+    border-radius: 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 16px;
+    }
+    
+    .buttonrgster:hover {
+    background-color: rgba(255, 255, 255, 0);
+    color:#4CAF50;
+    border: 2px solid #4CAF50;
+    }
 
   @media screen and (max-width: 768px) {
     .button{
@@ -930,7 +984,7 @@
     height: 3px;
     margin-top: -1px;
     height: 80px;
-    border-top: 1px dashed rgba(255, 255, 255, 0.38);
+    border-top: 1px dashed rgba(255, 255, 255, 0.38)!important;
     content: '';
     z-index: 1
 }
