add career_talks, fix city tour and slider home

--- a/city_tour/style.css
+++ b/city_tour/style.css
@@ -65,7 +65,7 @@ section#about .container .inner-container {
 }
 
 section#faq {
-  min-height: 70vh;
+  min-height: 80vh;
 }
 
 section#faq a {
@@ -91,12 +91,21 @@ section#faq a:hover {
           transform: scale(1.03);
 }
 
-section#faq .accordion-button.collapsed {
-  background: blue;
+section#faq .accordion-item button {
+  border: 0;
+  width: 100%;
+  text-align: start;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-section#faq .accordion-button.collapsed::after {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+section#faq .accordion-item button .fa-chevron-down {
+  color: #28a562;
 }
 
 @media screen and (max-width: 768px) {
