--- a/city_tour/style.scss
+++ b/city_tour/style.scss
@@ -91,7 +91,7 @@ section#about {
 }
 
 section#faq {
-  min-height: 70vh;
+  min-height: 80vh;
 
   a {
     @include btn-outline();
@@ -104,12 +104,17 @@ section#faq {
     }
   }
 
-  .accordion-button.collapsed {
-    background: blue
-  }
-  
-  .accordion-button.collapsed::after {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  .accordion-item button {
+    border: 0;
+    width: 100%;
+    text-align: start;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    .fa-chevron-down {
+      color: #28a562;
+    }
   }
 }
 
