--- a/home/style/main.css
+++ b/home/style/main.css
@@ -13,7 +13,7 @@
 body {
   background-color: #0f131e;
   font-family: "Poppins";
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 nav {
@@ -300,21 +300,15 @@ section#non-competitions .container .container-non-competitions p {
   width: 50%;
 }
 
-section#non-competitions .container #carouselExampleControls a:hover img {
-  border-radius: 8px;
-  border: 2px solid #28a562;
+section#non-competitions .container .slider .item-slider .container-text-item-slider {
+  background: rgba(255, 255, 255, 0.04);
+  border-radius: 0 0 8px 8px;
+  padding: 14px;
 }
 
-section#non-competitions .container #carouselExampleControls button i {
-  font-size: 30px;
-}
-
-section#non-competitions .container #carouselExampleControls button:hover {
-  cursor: context-menu;
-}
-
-section#non-competitions .container #carouselExampleControls button:hover i {
-  cursor: pointer;
+section#non-competitions .container .slider .item-slider .container-text-item-slider a {
+  color: #fff;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 786px) {
@@ -324,9 +318,6 @@ section#non-competitions .container #carouselExampleControls button:hover i {
   section#non-competitions .container .container-non-competitions h2,
   section#non-competitions .container .container-non-competitions p {
     width: 100%;
-  }
-  section#non-competitions .container #carouselExampleControls {
-    width: 90% !important;
   }
 }
 
