--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -41,15 +41,20 @@ $primary-color: #28a562;
   padding: 0;
 }
 
-body {
+.body {
   background-color: $bg-body;
   font-family: $general-font;
   overflow-x: hidden;
+  position: relative;
 }
 
 // nav
 nav {
-  padding: 10px 0;
+  font-family: $general-font;
+  position: absolute;
+  width: 100%;
+  padding: 16px 0;
+  z-index: 999;
 
   ul {
     list-style: none;
@@ -282,13 +287,36 @@ section#competitions {
       text-decoration: none;
       display: block;
       cursor: pointer;
-      padding: 20px;
+      padding: 24px;
       transition: 0.3s all ease;
+
+      h3{
+        font-size: 20px;
+        line-height: 30px;
+      }
+
+      p{
+        font-size: 14px;
+        line-height: 24px;
+        margin-top: 14px;
+      }
+      
+      p.read-more{
+        font-size: 16px;
+        line-height: 28px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
+
+      img{
+        margin-left: 16px;
+      }
 
       .read-more {
         position: absolute;
-        bottom: 2%;
-        left: 7%;
+        bottom: 24px;
+        left: 24px;
       }
     }
 
@@ -323,6 +351,10 @@ section#non-competitions {
 
     #carouselExampleControls {
       a {
+        img{
+          border: 2px solid transparent;
+        }
+        
         &:hover {
           img {
             border-radius: 8px;
