--- a/home/style/main.css
+++ b/home/style/main.css
@@ -54,15 +54,29 @@ nav ul li a.sign-in:hover {
   color: #fff;
 }
 
-@media screen and (max-width: 768px) {
+nav ul .btn-dropdown {
+  padding: 0 !important;
+  color: #fff !important;
+}
+
+nav ul .dropdown-menu li a:hover {
+  color: #fff;
+  background-color: #1f7949;
+}
+
+nav ul .btn-group {
+  margin: 0 10px;
+}
+
+@media screen and (max-width: 992px) {
   nav .container a#logo-petrolida,
   nav .container button {
     z-index: 1;
   }
-  nav .container ul {
+  nav .container ul.main-ul {
     display: none !important;
   }
-  nav .container ul.responsive {
+  nav .container ul.main-ul.responsive {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
@@ -84,13 +98,13 @@ nav ul li a.sign-in:hover {
     right: 0;
     z-index: 1;
   }
-  nav .container ul.responsive a.sign-in {
+  nav .container ul.main-ul.responsive a.sign-in {
     margin: 0;
   }
-  nav .container ul.responsive li {
+  nav .container ul.main-ul.responsive .li {
     margin: 10px 0;
   }
-  nav .container ul.responsive li:last-child {
+  nav .container ul.main-ul.responsive .li:last-child {
     margin-top: 50px;
   }
 }
