--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -54,7 +54,7 @@ nav {
   position: absolute;
   width: 100%;
   padding: 16px 0;
-  z-index: 999;
+  z-index: 2;
 
   ul {
     list-style: none;
@@ -99,7 +99,7 @@ nav {
         display: flex !important;
         flex-direction: column;
         align-items: center;
-        background: $bg-body;
+        background: black;
         // background: red;
         margin: 0;
         padding: 0px;
@@ -107,14 +107,14 @@ nav {
         position: absolute;
         top: 0;
         left: 0;
-        bottom: 0;
+        height: 100vh;
         right: 0;
         z-index: 1;
 
         a.sign-in {
           margin: 0;
         }
-
+        
         li {
           margin: 10px 0;
 
