--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -232,7 +232,6 @@ nav {
   color: inherit;
   padding: 16px 0;
   color: rgba(255, 255, 255, 0.87);
-  background: transparent;
 }
 .navbar.navbar-dark .navbar-nav .nav-link.active {
   color: #2c8857;
@@ -340,6 +339,11 @@ comingsoon-title#comingsoon .comingsoon-image {
   }
 }
 
+#error-404{
+  margin-top: 70px;
+  overflow-y: hidden;
+}
+
 #error-404 .error-img {
   width: 400px;
   max-width: 100%;
@@ -354,7 +358,7 @@ comingsoon-title#comingsoon .comingsoon-image {
   font: 600 2rem/2.625rem "Poppins", sans-serif;
   letter-spacing: 0.003em;
   color: inherit;
-  margin: 2.5rem auto 1.5rem;
+  margin: 0;
 }
 @media screen and (max-width: 576px) {
   #error-404 .error-title {
@@ -414,8 +418,29 @@ comingsoon-title#comingsoon .comingsoon-image {
   height: 900px;
 }
 
+.heroawarding {
+  background: linear-gradient(rgba(27, 33, 49, 0.85), #1b2131), url("https://images.unsplash.com/photo-1594122230689-45899d9e6f69?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80") no-repeat center;
+  background-size: cover;
+  -o-background-size: cover;
+  height: 900px;
+}
+
 .herooilrigdesign{
   background: linear-gradient(rgba(27, 33, 49, 0.85), #1b2131), url("https://images.unsplash.com/photo-1600221574280-9bcd5d108100?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80") no-repeat center;
+  background-size: cover;
+  -o-background-size: cover;
+  height: 900px;
+}
+
+.herocitytour{
+  background: linear-gradient(rgba(27, 33, 49, 0.85), #1b2131), url("https://images.unsplash.com/photo-1566176553949-872b2a73e04e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80") no-repeat center;
+  background-size: cover;
+  -o-background-size: cover;
+  height: 700px;
+}
+
+.herofracturedesign{
+  background: linear-gradient(rgba(27, 33, 49, 0.85), #1b2131), url("https://images.unsplash.com/photo-1608037222022-62649819f8aa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80") no-repeat center;
   background-size: cover;
   -o-background-size: cover;
   height: 900px;
@@ -453,7 +478,7 @@ comingsoon-title#comingsoon .comingsoon-image {
   }
 }
 .hero-desc {
-  width: 425px;
+  width: 700px;
   max-width: 100%;
   margin: 1.5rem 0;
 }
@@ -1333,6 +1358,13 @@ comingsoon-title#comingsoon .comingsoon-image {
     position: absolute;
     border-left: 1px dashed rgba(255, 255, 255, 0.38);
     height: 425px;
+    margin-left: 20px;
+  }
+
+  .timeline .vlpetrosmart {
+    position: absolute;
+    border-left: 1px dashed rgba(255, 255, 255, 0.38);
+    height: 375px;
     margin-left: 20px;
   }
 
