--- a/css/form.css
+++ b/css/form.css
@@ -7,6 +7,14 @@
 .password{
     background-color: green;
 }
+.form-control{
+    color: white;
+}
+.form-control:hover{
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+}
 .btn{
     width: 100%;
 }
