--- a/css/form.css
+++ b/css/form.css
@@ -9,9 +9,10 @@
 }
 .form-control{
     color: white;
+    background-color: transparent;
 }
 .form-control:hover{
-    background-color: white; 
+    background-color: transparent;
     color: black; 
     border: 2px solid #4CAF50;
 }
